fix: add overflow-hidden & reduced title & book image width on library

--- a/src/style/booklibrary.css
+++ b/src/style/booklibrary.css
@@ -9,7 +9,8 @@
 }
 
 .bookCon img {
-  width: 400px;
+  /* width: 400px; */
+  aspect-ratio: 1.55/1;
   height: 250px;
 }
 
@@ -22,7 +23,9 @@
   border-width: 5px;
   border-style: solid;
   margin: 1.25rem;
-  width: 400px;
+  /* width: 400px;
+  height: 250px; */
+  aspect-ratio: 1.55/1;
   height: 250px;
 }
 
@@ -33,6 +36,10 @@
   text-align: center;
   text-decoration: underline;
   margin: 0px;
+  inline-size: 275px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .addBookCon {
